--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Asante Joseph | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Asante Joseph | WDD 130</h1>
+        <p>Hi my name is Asante Joseph and I'm from Oda, Ghana. life in Oda is great!.....</p>
+        <img src="images/Profile.jpg" alt="Hello, this is Asante Joseph" width="200">
+    </main>
+    <footer>
+        <p>
+            &copy; 2025 👌 Asante Joseph 👍Oda, Ghana
+        </p>
+    </footer>
 </body>
+
+
 </html>
