--- a/week02/temple.html
+++ b/week02/temple.html
@@ -22,7 +22,8 @@
             <p>The Abidjan Ivory Coast Temple is the seventh temple built in Africa and the first for Ivory Coast (Côte
                 d'Ivoire).</p>
             <p>Dedicated 25 May 2025: <a
-                    href="https://www.churchofjesuschrist.org/temples/dedicatory-prayer/abidjan-ivory-coast-temple/2025-05-25?lang=eng"
+                    href="
+                https://www.churchofjesuschrist.org/temples/dedicatory-prayer/abidjan-ivory-coast-temple/2025-05-25?lang=eng"
                     target="_blank" rel="noopener noreferrer">Dedicatory Prayer</a></p>
         </section>
         <section>
@@ -36,7 +37,7 @@
         </section>
     </main>
     <footer>
-        <p>Temple Card - Your Name</p>
+        <p>Temple Card - Asante Joseph</p>
     </footer>
 </body>
 
