--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asante Joseph | WDD 130</title>
+    <meta name="description" content="Asante Joseph's personal website for WDD 130">
+    <meta name="author" content="Asante, Joseph, WDD130, personal website, Oda, Ghana">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -20,6 +22,12 @@
         <p>Hi my name is Asante Joseph and I'm from Oda, Ghana. life in Oda is great!.....</p>
         <img src="images/Profile.jpg" alt="Hello, this is Asante Joseph" width="200">
     </main>
+    <aside>
+        <h2>Oda</h2>
+        <img src="images/town.jpg" alt="A beautiful view of Oda town.">
+        <p>Akim Oda is a town in the Eastern Region of Ghana. It is known for its rich history, vibrant culture, and as
+            a commercial center for the surrounding communities.</p>
+    </aside>
     <footer>
         <p>
             &copy; 2025 👌 Asante Joseph 👍Oda, Ghana
