--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- 9 September 2025 -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asante Joseph | WDD 130</title>
-    <meta name="description" content="Asante Joseph's personal website for WDD 130">
-    <meta name="author" content="Asante, Joseph, WDD130, personal website, Oda, Ghana">
+    <meta name="description" content="Asante Joseph's personal website for WDD 130" <link rel="stylesheet"
+        href="styles/styles.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -20,7 +21,12 @@
     <main>
         <h1>Asante Joseph | WDD 130</h1>
         <p>Hi my name is Asante Joseph and I'm from Oda, Ghana. life in Oda is great!.....</p>
-        <img src="images/Profile.jpg" alt="Hello, this is Asante Joseph" width="200">
+        <img src="images/profile.jpg" alt="Hello, this is Asante Joseph" width="200">
+        <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
     </main>
     <aside>
         <h2>Oda</h2>
