home page enhancement

--- a/index.html
+++ b/index.html
@@ -16,23 +16,34 @@
         <nav>
             <a href="#">home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com" target="_blank" rel="noopener">LinkedIn</a>
+            <a href="https://facebook.com" target="_blank" rel="noopener">Facebook</a>
         </nav>
     </header>
     <main>
         <h1>Asante Joseph | WDD 130</h1>
-        <p>Hi my name is Asante Joseph and I'm from Oda, Ghana. life in Oda is great!.....</p>
         <img src="images/profile.jpg" alt="Hello, this is Asante Joseph" width="200">
+        <p>Hi, my name is Asante Joseph and I'm from Oda, Ghana. Life in Oda is great! I enjoy spending time with my
+            family and friends, exploring new places, and learning about technology. I am passionate about web
+            development and excited to improve my skills in this course. My favorite hobbies include reading, playing
+            football, and helping others in my community.</p>
         <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="https://churchofjesuschrist.org/temples/details/accra-ghana-temple" target="_blank"
+                    rel="noopener">Accra Ghana Temple</a></li>
+            <li><a href="https://churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank"
+                    rel="noopener">Salt Lake Temple</a></li>
+            <li><a href="https://churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank"
+                    rel="noopener">Aba Nigeria Temple</a></li>
         </ul>
     </main>
     <aside>
         <h2>Oda</h2>
         <img src="images/town.jpg" alt="A beautiful view of Oda town.">
         <p>Akim Oda is a town in the Eastern Region of Ghana. It is known for its rich history, vibrant culture, and as
-            a commercial center for the surrounding communities.</p>
+            a commercial center for the surrounding communities. The town is located along the Birim River and is famous
+            for cocoa farming, timber, and other agricultural products. Akim Oda serves as the capital of the Birim
+            Central Municipal District and features schools, markets, and healthcare facilities, making it an important
+            hub in the region.</p>
     </aside>
     <footer>
         <p>
